--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewpoint" content="width=decive-width, initial-scale=1.0">
+	<meta property="og:title" content="Jesimsim 2023 BucketList" />
+	<meta property="og:description" content="What's your dream?" />
+        <meta property="og:image" content="profile.jpg" 
 	<title>2023 버킷리스트</title>
 	<style>
 		@import url('https://fonts.googleapis.com/css2?family=Hahmlet:wght@400;500;600;700&display=swap');
