--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		}
 	</style>
 	<link rel="stylesheet" type="text/css" href="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/bucketList/sparta-bucket2.css">
-	<!--가운데로 오게 하는 스타일시트 -->
+	<!--스타일시트 -->
 
 </head>
 
@@ -53,26 +53,10 @@
 	<p class="msg">2023년에 이룰 다짐!</p>
 	<div class="row flex-row wrap">
 		<div class="bucket img1 center">AI부트캠프 무사히 수료</div>
-		<div class="bucket img2 center done">캐글 대회 참가(수상)</div>
+		<div class="bucket img2 center">캐글 대회 참가(수상)</div>
 		<div class="bucket img2 center">세줄일기 꾸준히 쓰기</div>
 		<div class="bucket img1 center">데이터 포트폴리오 만들기</div>
 		<div class="bucket img1 center">사이드 프로젝트로 수익창출</div>
 		<div class="bucket img2 center">보컬 트레이닝 받기</div>
 	</div>
 </body>
-<!-- shift+alt+f 개발환경에서 알아서 indent해주는 기능 -->
-<!-- p = 문단 -->
-<!-- 명찰 두개 bucket / img1 -->
-<!-- 스타일시트 / 명찰에 + center 가운데로 옴 -->
-<!-- 스타일시트 / 명찰에 + flew-row wrap 2개씩정렬 -->
-<!-- 스타일시트 / 명찰에 + done 도장찍기 -->
-<!-- 폰트다운사이트 https://fonts.google.com/?subset=korean 
-/ 상단 viewport -->
-<!-- * = 전체 다 적용 -->
-
-
-<!-- 스타일 바꾸기-->
-<!-- 태그의 클래스 속성에 원래 쓰던 img1을 img1-t2로 바꾸기-->
-<!-- 스타일 리스트 https://teamsparta.notion.site/2023-eee0e4c33563484bbce59df71dae2835-->
-
-<!-- 코딩에 입문하고 싶은 비전공자 > 웹개발, 데이터분석역량 기르고 싶은 기획자/마케터/취준생 > SQL, 개발자 취업이 목표 > 개발자 부트캠프-->
