--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewpoint" content="width=decive-width, initial-scale=1.0">
 	<meta property="og:title" content="Jesimsim 2023 BucketList" />
 	<meta property="og:description" content="What's your dream?" />
-        <meta property="og:image" content="profile.jpg" 
+        <meta property="og:image" content="profile.jpg" />
 	<title>2023 BucketList</title>
 	<style>
 		@import url('https://fonts.googleapis.com/css2?family=Hahmlet:wght@400;500;600;700&display=swap');
